# celeritas

./: .jenkins
app/: CMakeLists.txt
app/demo-interactor-alpaka/: DetectorInterface.hh  DetectorPointers.hh  DeviceAllocationAlpaka.cu  KNDemoKernel.cu  KNDemoRunner.cc  KNDemoRunner.cu  demo-interactor-alpaka.cc  demo-interactor-alpaka.cu  simple-driver.py
app/geant-exporter/: DetectorConstruction.cc
scripts/dev/env/: celeritas-linux.yaml
src/: CMakeLists.txt
src/base/: Collection.hh  DeviceAllocation.alpaka.cu  DeviceAllocationAlpaka.cu  DeviceVector.hh  DeviceVector.i.hh  DeviceVectorAlpaka.cu  DeviceVectorAlpaka.hh  OpaqueId.hh  StackAllocatorStore.hh
src/comm/: Device.cc  Utils.cu
src/geometry/: GeoTrackView.hh  GeoTrackView.i.hh
src/physics/base/: ParticleParams.hh  ParticleTrackView.hh  ParticleView.hh  Units.hh
src/random/: RngEngine.hh  RngEngine.i.hh
src/random/cuda/: RngEngine.cu  RngEngine.cuh
src/sim/: InitializeTracks.cu  InitializeTracks.hh  TrackInitializerStore.cc  TrackInitializerStore.hh
test/: CMakeLists.txt
test/base/: DeviceVector.test.cc  NumericLimits.test.cc
test/physics/: InteractorHostTestBase.hh
test/sim/: InitializeTracks.test.cc
